--- a/src/main/webapp/index.html
+++ b/src/main/webapp/index.html
@@ -202,6 +202,9 @@
     <script src="app/account/activate/activate.state.js"></script>
     <script src="app/account/activate/activate.controller.js"></script>
     <script src="app/account/account.state.js"></script>
+    <script src="app/mail/mail.state.js"></script>
+    <script src="app/mail/mail.controller.js"></script>
+    
     <!-- endinject -->
     <!-- endbuild -->
 
