--- a/src/main/webapp/app/mail/mail.html
+++ b/src/main/webapp/app/mail/mail.html
@@ -1,4 +1,4 @@
-<div ng-app="myApp" ng-controller="MailController">
+<div ng-controller="MailController">
 
     <div class="table-responsive">
     	<h2>Liste des étudiants</h2>
@@ -39,7 +39,7 @@
 		</textarea>
 	</div>
 	
-	 <button ng-click ="sendMail()">Send mail</button>
+	 <button ng-click="sendMail()">Send mail</button>
 
 </div>
 
