add search module

--- a/src/main/webapp/index.html
+++ b/src/main/webapp/index.html
@@ -17,6 +17,7 @@
     <!-- bower:css -->
     <link rel="stylesheet" href="bower_components/bootstrap/dist/css/bootstrap.css">
     <link rel="stylesheet" href="bower_components/angular-loading-bar/build/loading-bar.css">
+    <link rel="stylesheet" href="bower_components/angularjs-datepicker/src/css/angular-datepicker.css">
     <!-- endinject -->
     <!-- endbuild -->
     <!-- build:css content/css/main.css -->
@@ -94,6 +95,9 @@
     <script src="app/layouts/error/error.state.js"></script>
     <script src="app/home/home.state.js"></script>
     <script src="app/home/home.controller.js"></script>
+    <script src="app/search/search.state.js"></script>
+    <script src="app/search/search.controller.js"></script>
+    <script src="bower_components/angularjs-datepicker/src/js/angular-datepicker.js"></script>
     <script src="app/entities/teacher/teacher-dialog.controller.js"></script>
     <script src="app/entities/teacher/teacher-detail.controller.js"></script>
     <script src="app/entities/teacher/teacher-delete-dialog.controller.js"></script>
